--- a/local/docker-compose-spring-app.yml
+++ b/local/docker-compose-spring-app.yml
@@ -12,7 +12,7 @@ services:
       POSTGRES_URL: jdbc:postgresql://wishlist_postgres:5432/wishlist
       POSTGRES_USER: wishlist
       POSTGRES_PASSWORD: 12345
-      PRODUCT_API_URL: https://challenge-api.luizalabs.com/api/
+      PRODUCT_API_URL: http://challenge-api.luizalabs.com/api/
       REDIS_HOST: wishlist_redis
       REDIS_PORT: 6379
       REDIS_DATABASE: 0
